fix wrong padding #1218

--- a/theming/scss/layouts/_profile.scss
+++ b/theming/scss/layouts/_profile.scss
@@ -52,7 +52,6 @@ main.main .content .content__container.content__container--profile {
             @extend .d-flex;
             @extend .flex-column;
             @extend .p-3;
-            @extend .pb-2;
             @extend .mb-2;
 
             &--highlight {
